fixed registration bleed

--- a/ncssm-online-react/src/App.css
+++ b/ncssm-online-react/src/App.css
@@ -75,7 +75,6 @@
   background-color: #090522;
   background-image: url("../public/spoonbgo.png");
   background-size: 150px;
-  height: 100vh
 }
 
 .Signin{
